fix bug:解决拖动选框的问题 //http://stackoverflow.com/questions/2614461/javascipt-get-mouse-position-relative-to-parent-element

--- a/assets/index.styl
+++ b/assets/index.styl
@@ -20,6 +20,7 @@ body
     overflow auto
   .excel-content
     width 100%
+    cursor crosshair
   .fields
     position absolute
     left 35px
@@ -29,6 +30,7 @@ body
     white-space nowrap
     z-index 2
     -webkit-transition box-shadow .2s ease-in-out;
+    cursor default
     span
       width 100px
       display inline-block
@@ -46,6 +48,7 @@ body
     left 0
     top 25px
     -webkit-transition box-shadow .2s ease-in-out;
+    cursor default
     div
       display box
       box-orient horizontal
@@ -67,12 +70,15 @@ div.input
   position absolute
   resize none
   margin-left 35px
-  box-shadow inset 0 0 5px #443fff
   overflow hidden
-  z-index -1
-  background #eee
+  z-index 99
+  background rgba(0, 255, 0, .2)
   textarea
     border none
     resize none
     background none
+    outline none
+    width 100%
+    height 100%
+    display none
 
